--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+
+<link rel="stylesheet" href="app.css"/>
+
+</head>
+
 <body>
+
 <h1>Jack Keller</h1>
+
 <button> click me!</button>
 
 </body>
+
 <script src = "app.js"></script> 
-<html>
+
+</html>
