--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
 
-<h1>Jack Keller</h1>
+<h1>                       On another episode of ... What's Going on Tonight!</h1>
 
-<button> click me!</button>
+<button onClick = "alertButton()" >Click me! (I promise nothing bad will happen) </button>
 
 </body>
 
